plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
    id 'edu.sc.seis.launch4j' version '2.4.9'
}

sourceCompatibility = 14
targetCompatibility = 14

version = '0.0.1'
group = 'alexskxy.transportfinder'
mainClassName = "$moduleName/alexskxy.transportfinder.Main"

javafx {
    version = "14"
    modules = ['javafx.controls', 'javafx.fxml']
}

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'com.google.guava:guava:29.0-jre'
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'

    compile 'org.mapstruct:mapstruct-processor:1.3.0.Final'
    compile 'com.google.api-client:google-api-client:1.30.10'
    compileOnly 'org.projectlombok:lombok:1.18.16'

    testCompile 'org.projectlombok:lombok:1.18.16'
    testRuntime 'org.projectlombok:lombok:1.18.16'
    testCompile 'org.mapstruct:mapstruct-processor:1.3.0.Final'
    testRuntime 'org.mapstruct:mapstruct-processor:1.3.0.Final'

    testCompile 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    testImplementation 'org.junit.platform:junit-platform-commons:1.7.0'
    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.0")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.0")


    annotationProcessor 'org.projectlombok:lombok:1.18.16'
}

launch4j {
    mainClassName = 'alexskxy.transportfinder.Main'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
}
